--- a/public/mockup.html
+++ b/public/mockup.html
@@ -3,78 +3,150 @@
 <head>
   <meta charset="utf-8">
   <title>React TagPicker Fun</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-  <style>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css">
+  <style>
+    .page {
+      display: none;
+    }
+
+    .page.page-list {
+      display: block;
+    }
   </style>
 </head>
 <body>
 
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">ShpLst</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse">
-        <i class="material-icons">menu</i>
-      </a>
-      <ul class="side-nav">
-      <!-- <ul class="side-nav" style="left: 0;"> -->
-        <li>
-          <a>Sass</a>
-        </li>
-        <li class="active">
-          <a>Components</a>
-        </li>
-        <li>
-          <a>Javascript</a>
-        </li>
-        <li>
-          <a>Mobile</a>
-        </li>
-        <a class="waves-effect waves-light btn">
-          <i class="material-icons left">playlist_add</i>
-          New List
-        </a>
-      </ul>
-    </div>
-  </nav>
 
-  <div>
-    <div class="collection" style="margin: 0">
-      <div class="collection-item">
-        <div class="row valign-wrapper" style="margin: 0">
-          <div class="col s8 valign">
-            <h5>Some Thing</h5>
+  <nav class="navbar navbar-default navbar-static-top" style="margin-bottom: 0;">
+      <div class="page page-list">
+        <div class="row">
+          <div class="col-xs-3">
+            <div class="navbar-brand">
+              <i class="material-icons">keyboard_arrow_left</i>
+            </div>
           </div>
-          <div class="col s4 small">
-            <a class="btn-floating green"><i class="material-icons">done</i></a>
-            <a class="btn-floating red"><i class="material-icons">delete</i></a>
-            <a class="btn-floating blue"><i class="material-icons">mode_edit</i></a>
+          <div class="col-xs-6">
+            <h4 class="navbar-text text-center">Some List</h4>
+          </div>
+          <div class="col-xs-3 text-right">
+            <i class="material-icons navbar-text" style="padding-right: 15px;">mode_edit</i>
           </div>
         </div>
       </div>
-      <div class="collection-item">
-        <div class="row valign-wrapper" style="margin: 0">
-          <div class="col s8 valign">
-            <h5>Another Thing</h5>
+      <div class="page page-lists">
+        <div class="row">
+          <div class="col-xs-3">
+
           </div>
-          <div class="col s4 small">
-            <a class="btn-floating green"><i class="material-icons">done</i></a>
-            <a class="btn-floating red"><i class="material-icons">delete</i></a>
-            <a class="btn-floating blue"><i class="material-icons">mode_edit</i></a>
+          <div class="col-xs-6">
+            <h4 class="navbar-text text-center">Lst</h4>
+          </div>
+          <div class="col-xs-3 text-right">
+
+          </div>
+        </div>
+      </div>
+  </nav>
+
+  <div class="page page-list">
+    <div class="list-group">
+      <div class="list-group-item">
+        <div class="row">
+          <div class="col-xs-7">
+            <span class="h5">Some Item</span>
+          </div>
+          <div class="col-xs-5 text-right">
+            <div class="btn-group">
+              <a class="btn btn-xs btn-success"><i class="material-icons">done</i></a>
+              <a class="btn btn-xs btn-danger"><i class="material-icons">delete</i></a>
+              <a class="btn btn-xs btn-primary"><i class="material-icons">mode_edit</i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="list-group-item">
+        <div class="row">
+          <div class="col-xs-7">
+            <input type="text" class="form-control input-md" value="Editing Item...">
+          </div>
+          <div class="col-xs-5 text-right">
+            <div class="btn-group">
+              <a class="btn btn-xs btn-success"><i class="material-icons">save</i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="list-group-item">
+        <div class="row">
+          <div class="col-xs-7">
+            <span class="h5">Another Item</span>
+          </div>
+          <div class="col-xs-5 text-right">
+            <div class="btn-group">
+              <a class="btn btn-xs btn-success"><i class="material-icons">done</i></a>
+              <a class="btn btn-xs btn-danger"><i class="material-icons">delete</i></a>
+              <a class="btn btn-xs btn-primary"><i class="material-icons">mode_edit</i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="list-group-item">
+        <div class="row">
+          <div class="col-xs-7" style="opacity: 0.7;">
+            <s><span class="h5">Completed Item</span></s>
+          </div>
+          <div class="col-xs-5 text-right">
+            <div class="btn-group">
+              <a class="btn btn-xs btn-primary"><i class="material-icons">restore</i></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <a
-      class="btn-floating btn-large"
-      style="bottom: 20px; right: 20px; position: fixed;"
-        >
-      <i class="material-icons">add</i>
+      style="bottom: 20px; right: 25px; position: fixed;">
+      <i class="material-icons" style="font-size: 48px;">add</i>
     </a>
-
+    <a
+      style="bottom: 15px; width: 100%; position: fixed; text-align: center;">
+      hide completed
+    </a>
   </div>
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <div class="page page-lists">
+    <div class="list-group">
+      <div class="list-group-item">
+        <div class="pull-right">
+          <i class="material-icons" style="font-size: 48px; padding-top: 8px;">keyboard_arrow_right</i>
+        </div>
+        <h4 class="list-group-item-heading">Some List</h4>
+        <p class="list-group-item-text">
+          <strong>Items for the Christmas party</strong>
+          <br>
+          <small>3 of 12 complete</small>
+        </p>
+      </div>
+      <div class="list-group-item">
+        <div class="pull-right">
+          <i class="material-icons" style="font-size: 48px; padding-top: 0px;">keyboard_arrow_right</i>
+        </div>
+        <h4 class="list-group-item-heading">Around the House</h4>
+        <p class="list-group-item-text">
+          <small>6 of 27 complete</small>
+        </p>
+      </div>
+
+    <a
+      style="bottom: 20px; right: 25px; position: fixed;">
+      <i class="material-icons" style="font-size: 48px;">add</i>
+    </a>
+  </div>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </body>
 </html>
