Render something on the page!

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <title>React TagPicker Fun</title>
   </head>
   <body>
-    <h1>React TagPicker Fun<h1>
-
+    <div id="app"></div>
     <script src="/assets/bundle.js"></script>
   </body>
 </html>
