--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>React TagPicker Fun</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css">
+    <style>
+      a, i, span {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
     <script src="/assets/bundle.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </body>
 </html>
