Adds overflow-x to squash nasty ... overflow-x

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       a, i, span {
         cursor: pointer;
       }
+      html, body {
+        overflow-x: hidden;
+      }
     </style>
   </head>
   <body>
